# tree-sitter-clingo

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-clingo.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/python/tree_sitter_clingo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: aggregates.txt  arithmetic.txt  boolean constants.txt  conditions.txt  directives.txt  disjunctive logic programs.txt  logical_operators.txt  normal logic program (with integrity constraints).txt  optimization.txt  other.txt  script.txt  theories.txt
